kustomize/igpu-stack/unmanic-animes/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: unmanic-animes
  labels:
    app: unmanic-animes
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@hourly"
    keel.sh/match-tag: "true"
    keel.sh/approvals: "1"
    reloader.stakater.com/auto: "true"
spec:
  strategy:
    type: Recreate
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: unmanic-animes
  template:
    metadata:
      labels:
        app: unmanic-animes
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - ellie
      containers:
      - name: unmanic-animes
        image: josh5/unmanic:latest
        ports:
        - name: unmanic-animes
          containerPort: 8888
        resources:
          limits:
            gpu.intel.com/i915: "5"
        volumeMounts:
        - name: unmanic-animes
          mountPath: /config
        - name: nfs-animes
          mountPath: /data/videos/animes
        - name: nfs-animes-movies
          mountPath: /data/videos/animes-movies
        - name: unmanic-animes-transcode
          mountPath: /tmp/unmanic
      volumes:
      - name: unmanic-animes
        persistentVolumeClaim:
          claimName: unmanic-animes
      - name: nfs-animes-movies
        nfs:
          server: 192.168.253.250
          path: /export/data/videos/animes-movies
      - name: nfs-animes
        nfs:
          server: 192.168.253.250
          path: /export/data2/videos/animes
      - name: unmanic-animes-transcode
        emptyDir:
          medium: Memory
          sizeLimit: 40Gi
