kustomize/igpu-stack/unmanic-animes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: unmanic-animes
spec:
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.253.26
  selector:
    app: unmanic-animes
  type: LoadBalancer
  ports:
    - port: 8888
      targetPort: unmanic-animes
