kustomize/igpu-stack/unmanic-animes/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unmanic-animes
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`unmanic-animes-k8s.vinicima.com`) || Host(`unmanic-animes.vinicima.com`)
      kind: Rule
      services:
        - name: unmanic-animes
          port: 8888
      middlewares:
        - name: body-size-50m
          namespace: traefik
  tls:
    secretName: vinicima.com-tls
